# progparaleladistribuidaufsc

./: README.md  biblia-em-txt-lowercase.txt  contador_openmp.c  contador_sequencial.c  reproduz_texto.c  reproduz_texto_openmp.c  reproduz_texto_paralelo.c  reproduz_texto_sockets_cliente.c  reproduz_texto_sockets_servidor.c
Trabalho Final/: CMakeLists.txt  calcula_fatorial_mpi.c  calcula_fatorial_sequencial.c  calcula_fatorial_sockets_tcp_cliente.c  calcula_fatorial_sockets_tcp_servidor.c  cliente  exemplo.c  fact  hostfile  mpi  sequencial  servidor
